--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,17 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "public/api/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
-    }
+    { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/public/api/$1.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/api/(.*)", "dest": "/server.js" },
+    { "src": "/(.*)", "dest": "/study-store.html" }
   ]
 }
