--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,10 +1,19 @@
 {
   "version": 2,
   "builds": [
-    { "src": "server.js", "use": "@vercel/node" }
+    {
+      "src": "public/server.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/server.js" },
-    { "src": "/(.*)", "dest": "/study-store.html" }
+    {
+      "src": "/api/(.*)",
+      "dest": "public/server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "public/study-store.html"
+    }
   ]
 }
