--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "public/api/*.js",
+      "src": "server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/public/api/$1.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    {
+      "src": "/api/process-payment",
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/study-store.html"
+    }
   ]
 }
-
-
