--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "razorpay": "^2.8.6",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "dotenv": "^16.3.1"
   }
 }
