--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/process-payment",
-      "dest": "server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/study-store.html"
+      "src": "/api/(.*)",
+      "dest": "/server.js"
     }
   ]
 }
