--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "movie-website",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "study-store.html",
   "scripts": {
-    "start": "node server.js"
+    "start": "vercel dev"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "razorpay": "^2.8.6",
-    "googleapis": "^105.0.0",
-    "dotenv": "^16.3.1"
-  }
+    "googleapis": "^150.0.1",
+    "razorpay": "^2.9.6",
+    "@google-cloud/functions-framework": "^3.0.0"
+  },
+  "devDependencies": {
+    "vercel": "^35.0.0"
+  },
+  "type": "commonjs"
 }
