--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/", // <-- NEW: This rule catches requests to the root path
-      "destination": "/study-store.html" // <-- NEW: It serves study-store.html for the root
+      "source": "/",
+      "destination": "/study-store.html"
     },
     {
       "source": "/api/process-payment",
